src/CSS/style.css
:root {
  --not-white: #fffaf3;
  --drk-white: #f2e9e1;
  --not-black: #191724;
  --not-red:   #eb6f92;
  --not-blue:  #31748f;
  --not-green: #56949f;
  --not-grey:  #393552;
  --muted:     #6e6a86;
  --hdr-hght:  5rem;
  --lrg-txt:   2.2rem;
}

.light-theme {
  --bg-color: var(--not-white);
  --bg-side:  var(--drk-white);
  --text:     var(--not-black);
}

.dark-theme {
   --bg-color: var(--not-grey); 
   --bg-side: var(--muted);
   --text: var(--drk-white);
} 

* {
  margin: 0;
  padding: 0;
  font-size: 10px;
  box-sizing: border-box;
}

.main-container {
  min-height: 100vh;
  max-height: fit-content;
  display: flex;
  font-family: 'Quicksand', sans-serif;
}

.side-note-menu {
  min-height: 100vh;
  max-height: fit-content;
  width: 20rem;
  background-color: var(--bg-side);
}

.side-nav {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: var(--hdr-hght);
}

.side-nav span {
  color: var(--text);
}

.side-nav span p {
  font-size: var(--lrg-txt);
}

.main {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  background-color: var(--bg-color);
}

header, footer {
  height: var(--hdr-hght);
}

header {
  display: flex;
  justify-content: end;
  align-items: center;
}

header ul {
  display: flex;
}

header li {
  list-style: none;
  padding: var(--lrg-txt);
}

header a {
  text-decoration: none;
  color: var(--text);
  font-size: 1.5rem;
}

.note-container-main {
  display: flex;
  flex-grow: 1;
  justify-content: center;
}

.note-area {
  width: 90%
}

article {
  margin-bottom: var(--lrg-txt);
}

.read-note-area p {
  font-family: 'Libre Baskerville', serif;
  color: var(--text);
  font-size: 1.6rem;
}

i {
  font-size: 3rem;
}

.icons {
  color: var(--text);
}

textarea {
  font-family: 'Libre Baskerville', serif;
  caret-color: var(--not-red);
  border: none;
  border-bottom: 2px solid var(--text);
  outline: none;
  resize: none;
  overflow: auto;
}

footer {
  display: flex;
  justify-content: center;
  align-items: center;
}

footer p {
  color: var(--text);
  font-size: var(--lrg-txt);
}

.save {
  background-color: #9ccfd8; /* Green */
  border: none;
  color: #191724;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin-right: 10px;
  font-family: 'Libre Baskerville', sans-serif;
}

.cancel {
  background-color: #eb6f92;
  border: none;
  color: #191724;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  font-family: 'Libre Baskerville', sans-serif;
}

.close {
  background-color: #eb6f92;
  border: none;
  color: #191724;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin-top: 10px;
  margin-right: 10px;
  font-family: 'Libre Baskerville', sans-serif;
}

.saved-note {
  font-family: 'Libre Baskerville', sans-serif;
  width: 150px;
  color: var(--not-black);
}

.saved-note-dark {
  font-family: 'Libre Baskerville', sans-serif;
  width: 150px;
  color: var(--drk-white);
}

.note-header {
  font-size: 20px;
  font-family: 'Libre Baskerville', sans-serif;
  width: 50vw;
}

.note-header-dark {
  font-size: 20px;
  font-family: 'Libre Baskerville', sans-serif;
  color: var(--drk-white);
  width: 50vw;
}

.note-text{
  font-family: 'Libre Baskerville', serif;
  width: 50vw;
  word-wrap: break-word;
}

.note-text-dark {
  font-family: 'Libre Baskerville', serif;
  color: var(--drk-white);
  width: 50vw;
}

.edit-note {
  background-color: #f2e9e1;
  display: inline-block;
  border: solid;
  border-width: 3px;
  padding: 10px;
  border-radius: 25px;
}

.edit-note-dark {
  background-color: var(--muted);
  display: inline-block;
  border: solid;
  border-width: 3px;
  padding: 10px;
  border-radius: 25px;
}

.edit-note-div {
  max-width: 100px;
}

